--- a/src/styles.css
+++ b/src/styles.css
@@ -7,22 +7,15 @@ body {
 
 nav {
     width: 100%;
-    height: 50px;
+    height: 150px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .logo {
     height: 30px;
-    margin-top: 15px;
     margin-left: 50px;
-}
-
-.nav-bar {
-    display: flex;
-    justify-content: flex-end;
-    list-style-type: none;
-    text-transform: uppercase;
 }
 
 li {
@@ -37,30 +30,35 @@ li {
 }
 
 .hero-info {
-    margin: 30px;
-    max-width: 600px;
+    max-width: 500px;
 }
 
 .hero-image {
-    height: 450px;
-    width: 350px;
-    margin-top: 150px;
-    margin-left: 400px;
-    border-radius: 50px;
+    visibility: hidden;
+    height: 0px;
 }
 
 .hero-description {
     margin-bottom: 40px;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 600px) {
     .hero-info {
-        max-width: 500px;
+        margin: 30px;
+        max-width: 600px;
     }
 
     .hero-image {
-        visibility: hidden;
-        height: 0px;
+        height: 450px;
+        width: 350px;
+        margin-top: 150px;
+        margin-left: 400px;
+        border-radius: 50px;
+        visibility: visible;
+    }
+
+    nav {
+        height: 50px;
     }
 }
 
@@ -161,6 +159,45 @@ footer {
 
 .far {
     margin: 3px;
+}
+
+.hamburger {
+    border: none;
+    background-color: white;
+    margin-top: 10px;
+}
+
+.hamburger:focus {
+    outline: none;
+}
+
+.nav-bar {
+    display: none;
+
+}
+
+.nav-bar.show {
+    height: 0px;
+    display: flex;
+    flex-direction: column;
+    list-style-type: none;
+    text-transform: uppercase;
+    margin-bottom: 100px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+@media only screen and (min-width: 600px) {
+    .hamburger {
+        display: none;
+    }
+
+    .nav-bar {
+        display: flex;
+        justify-content: flex-end;
+        list-style-type: none;
+        text-transform: uppercase;
+    }
 }
 
 /* Project Page Styling */
