--- a/src/styles.css
+++ b/src/styles.css
@@ -161,6 +161,56 @@ footer {
     margin: 3px;
 }
 
+.footer-btns {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.theme {
+    margin-top: 15px;
+    height: 50px;
+    width: 100px;
+    border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    flex-direction: row;
+}
+
+.theme-btns {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    cursor: pointer;
+}
+
+.theme-btns i {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    width: 50px;
+    border-radius: 10px;
+}
+
+.fa-moon {
+    border-right: 1px solid black;
+    background-color: #d3d3d3;
+    color: #d3d3d3;
+}
+
+.theme-hide {
+    margin-top: 10px;
+    height: 50px;
+    width: 100px;
+    background-color: #1963B2;
+    visibility: hidden;
+}
+
 .hamburger {
     border: none;
     background-color: white;
