--- a/src/styles.css
+++ b/src/styles.css
@@ -25,41 +25,36 @@ li {
 .hero {
     width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 .hero-info {
     max-width: 500px;
 }
 
+.hero-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .hero-image {
-    visibility: hidden;
-    height: 0px;
+    height: 450px;
+    width: 350px;
+    margin-top: 150px;
+    margin-left: 0px;
+    border-radius: 50px;
+    visibility: visible;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .hero-description {
     margin-bottom: 40px;
-}
-
-@media only screen and (min-width: 1200px) {
-    .hero-info {
-        margin: 30px;
-        max-width: 600px;
-    }
-
-    .hero-image {
-        height: 450px;
-        width: 350px;
-        margin-top: 150px;
-        margin-left: 400px;
-        border-radius: 50px;
-        visibility: visible;
-    }
-
-    nav {
-        height: 50px;
-    }
 }
 
 .avatar {
@@ -68,7 +63,7 @@ li {
 }
 
 #job-title {
-    margin-top: 175px;
+    margin-top: 100px;
     margin-bottom: 0;
     color: lightgray;
 }
@@ -247,6 +242,36 @@ footer {
         justify-content: flex-end;
         list-style-type: none;
         text-transform: uppercase;
+    }
+
+    .hero-info {
+        margin: 30px;
+        max-width: 600px;
+    }
+
+    .hero-image {
+        height: 450px;
+        width: 350px;
+        margin-top: 150px;
+        margin-left: 400px;
+        border-radius: 50px;
+        visibility: visible;
+    }
+
+    .hero {
+        width: 80%;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        padding-right: 100px;
+    }
+
+    nav {
+        height: 50px;
+    }
+
+    #job-title {
+        margin-top: 175px;
     }
 }
 
