--- a/src/styles.css
+++ b/src/styles.css
@@ -9,13 +9,14 @@ nav {
     width: 100%;
     height: 150px;
     display: flex;
-    justify-content: space-between;
     align-items: center;
 }
 
 .logo {
+    width: 600px;
     height: 30px;
     margin-left: 50px;
+    font-size: 30px;
 }
 
 li {
@@ -23,7 +24,6 @@ li {
 }
 
 .hero {
-    width: 100%;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -44,7 +44,6 @@ li {
 .hero-image {
     height: 450px;
     width: 350px;
-    margin-top: 150px;
     margin-left: 0px;
     border-radius: 50px;
     visibility: visible;
@@ -210,6 +209,9 @@ footer {
     border: none;
     background-color: white;
     margin-top: 10px;
+    font-size: 30px;
+    margin-left: auto;
+    width: 50px;
 }
 
 .hamburger:focus {
@@ -218,10 +220,10 @@ footer {
 
 .nav-bar {
     display: none;
-
 }
 
 .nav-bar.show {
+    width: 100px;
     height: 0px;
     display: flex;
     flex-direction: column;
@@ -230,6 +232,7 @@ footer {
     margin-bottom: 100px;
     align-items: center;
     justify-content: space-between;
+    margin-left: auto;
 }
 
 @media only screen and (min-width: 1200px) {
@@ -242,6 +245,7 @@ footer {
         justify-content: flex-end;
         list-style-type: none;
         text-transform: uppercase;
+        padding-left: 0px;
     }
 
     .hero-info {
@@ -268,10 +272,15 @@ footer {
 
     nav {
         height: 50px;
+        justify-content: space-between;
     }
 
     #job-title {
         margin-top: 175px;
+    }
+
+    .logo {
+        font-size: 20px;
     }
 }
 
@@ -281,15 +290,17 @@ footer {
     display: flex;
     height: 900px;
     justify-content: center;
-    /* align-items: center; */
 }
 
 .project-list {
     display: flex;
     flex-direction: column;
     align-items: center;
+    flex-wrap: wrap;
     list-style-type: none;
     font-size: 24px;
+    width: 800px;
+    height: 500px;
 }
 
 .project-item {
@@ -305,4 +316,16 @@ footer {
 
 .project-item>a {
     color: white;
+}
+
+@media only screen and (min-width: 1200px) {
+
+    #myResume {
+        width: 80%;
+        height: 150px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 50px;
+    }
+
 }
