added overflow: hidden to body

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,7 @@ body {
     flex-direction: column;
     font-family: 'Nunito', sans-serif;
     background-color: white;
+    overflow: hidden;
 }
 
 nav {
