--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,13 @@
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 body {
     display: flex;
+    padding: 0;
+    margin: 0;
     flex-direction: column;
     font-family: 'Nunito', sans-serif;
     background-color: white;
