--- a/src/styles.css
+++ b/src/styles.css
@@ -14,11 +14,12 @@ body {
     font-family: 'Nunito', sans-serif;
     background-color: white;
     overflow: hidden;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
 
 nav {
+    margin-top: 10px;
     width: 90%;
     height: 150px;
     display: flex;
@@ -282,6 +283,7 @@ footer {
     }
 
     nav {
+        margin-top: 10px;
         width: 100%;
         height: 50px;
         justify-content: space-between;
@@ -300,7 +302,7 @@ footer {
 
 .projects {
     display: flex;
-    height: 900px;
+    height: 90vh;
     justify-content: center;
 }
 
@@ -312,7 +314,7 @@ footer {
     list-style-type: none;
     font-size: 24px;
     width: 800px;
-    height: 600px;
+    height: 70vh;
 }
 
 .project-item {
