--- a/src/styles.css
+++ b/src/styles.css
@@ -143,7 +143,7 @@ footer {
 
 .contact-info {
     display: flex;
-    width: 600px;
+    width: 100%;
     justify-content: center;
 }
 
@@ -173,11 +173,11 @@ footer {
     flex-direction: row;
     width: 100%;
     justify-content: space-between;
+    padding: 0 20px;
 }
 
 .theme {
     margin-top: 15px;
-    margin-left: 30px;
     height: 50px;
     width: 100px;
     border: 1px solid black;
